@@ -1,0 +1,45 @@
+<?php
+/**
+ * File containing the abstract ezcDocumentParser class
+ *
+ * @package Document
+ * @version //autogen//
+ * @copyright Copyright (C) 2005-2009 eZ Systems AS. All rights reserved.
+ * @license http://ez.no/licenses/new_bsd New BSD License
+ */
+
+/**
+ * A base class for document parsers
+ *
+ * @package Document
+ * @version //autogen//
+ */
+interface ezcDocumentErrorReporting
+{
+    /**
+     * Trigger parser error
+     *
+     * Emit a parser error and handle it dependiing on the current error
+     * reporting settings.
+     *
+     * @param int $level
+     * @param string $message
+     * @param string $file
+     * @param int $line
+     * @param int $position
+     * @return void
+     */
+    public function triggerError( $level, $message, $file = null, $line = null, $position = null );
+
+    /**
+     * Return list of errors occured during visiting the document.
+     *
+     * May be an empty array, if on errors occured, or a list of
+     * ezcDocumentVisitException objects.
+     *
+     * @return array
+     */
+    public function getErrors();
+}
+
+?>
