@@ -5,6 +5,8 @@
 - Fixed: Implementation of PDF wrapper class, to call correct renderer.
 - Fixed: Implementation of style loading in PDF wrapper class.
 - Implemented: Method to register additional PDF parts in wrapper class.
+- Implemented: Global error reporting interface, now also used by the PDF
+  renderer.
 
 
 1.2alpha1 - Tuesday 26 May 2009
